--- a/index.html
+++ b/index.html
@@ -3,14 +3,34 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+    <body onload="slide()">
+        <fieldset>
+            <h1>Simple Interest Calculator</h1>
+            <form class="calculatorForm">
+                <label for="principal">Amount</label>
+                <input type="text" id="principal" name="principal"> <br/>
+                <label for="rate">Rate</label>
+                <input type="range" min="1" max="30" value="3" class="slider" id="rate">
+                <span id="slidervalue"></span><br/>
+                <label for="years">No. of Years</label>
+                <select id="years" name="years">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select><br>
+                <button type="button" onclick="compute()">Compute Interest</button>
+            </form>
+            <output>
+                <span id="result"></span>
+            </output>
+            <p>&copy Everyone Can Get Rich</p>        
+        </fieldset>
     </body>
 </html>
